--- a/src/pages/reservation/reservation.html
+++ b/src/pages/reservation/reservation.html
@@ -13,14 +13,18 @@
 </ion-header>
 
 <ion-content class='container' margin-top>
+
   <ion-item>
-    <ion-icon item-start name='calendar'></ion-icon>
+    <!-- <ion-icon item-start name='calendar'></ion-icon> -->
+    <img class='custom-icon' item-start src="../../assets/svg/orderform_calendar.svg" alt="">
+
     <ion-label>Date</ion-label>
-    <ion-datetime displayFormat="MMM DD YYYY" [(ngModel)]="Booking.date"></ion-datetime>
+    <ion-datetime displayFormat="MMM DD YYYY" [(ngModel)]="Booking.date" min= {{Booking.date}} max ={{maxDate}}></ion-datetime>
   </ion-item>
 
   <ion-item>
-    <ion-icon item-start name='bus'></ion-icon>
+    <!-- <ion-icon item-start name='bus'></ion-icon> -->
+    <img class='custom-icon' item-start src="../../assets/svg/orderform_route.svg" alt="">
     <ion-label>Route</ion-label>
     <ion-select interface="action-sheet" (ionChange)="onRouteChange(Booking.routeName)" [(ngModel)]="Booking.routeName">
       <ion-option *ngFor = 'let route of Routes'>{{route.name}}</ion-option>
@@ -28,10 +32,11 @@
   </ion-item>
 
   <ion-item>
-    <ion-icon item-start name='pin'></ion-icon>
+    <!-- <ion-icon item-start name='pin'></ion-icon> -->
+    <img class='custom-icon' item-start src="../../assets/svg/orderform_pickup.svg" alt="">
     <ion-label>Pickup Stop</ion-label>
     <!-- <ion-select *ngFor = 'let route of Routes' interface="action-sheet"> -->
-    <ion-select interface="action-sheet" (ionChange)="onPickupChange(Booking.pickup)" [(ngModel)]="Booking.pickup">
+    <ion-select disabled={{!Booking.routeName}} interface="action-sheet" (ionChange)="onPickupChange(Booking.pickup)" [(ngModel)]="Booking.pickup">
         <ion-option *ngFor = 'let station of selectedRoutePickupStations'>{{ station.name }}</ion-option>
     </ion-select>
     <!-- <ion-select interface="action-sheet">
@@ -40,28 +45,32 @@
   </ion-item>
 
   <ion-item>
-    <ion-icon item-start name='navigate'></ion-icon>
+    <!-- <ion-icon item-start name='navigate'></ion-icon> -->
+    <img class='custom-icon' item-start src="../../assets/svg/orderform_destination.svg" alt="">
     <ion-label>Dropoff Stop</ion-label>
-    <ion-select interface="action-sheet" [(ngModel)]="Booking.dropoff">
+    <ion-select disabled={{!Booking.routeName}} interface="action-sheet" [(ngModel)]="Booking.dropoff">
         <ion-option *ngFor = 'let station of selectedRouteDropoffStations'>{{ station.name }}</ion-option>
     </ion-select>
   </ion-item>
   
   <ion-item class="no-border-bottom" margin-bottom>
-    <ion-icon item-start name='time'></ion-icon>
+    <!-- <ion-icon item-start name='time'></ion-icon> -->
+    <img class='custom-icon' item-start src="../../assets/svg/orderform_shuttletime.svg" alt="">
     <ion-label>Shuttle Time</ion-label>
     <!-- <ion-datetime displayFormat="h:mm A" pickerFormat="h mm A" [(ngModel)]="Booking.time"></ion-datetime> -->
-    <ion-datetime displayFormat="hh:mm" hourValues={{Hours}} minuteValues={{Minute}} [(ngModel)]="Booking.alertTime"></ion-datetime>
+    <ion-datetime disabled={{!Booking.pickup}} displayFormat="HH:mm" hourValues={{hours}} minuteValues={{minute}} min={{minTime}} [(ngModel)]="Booking.alertTime" (ionChange)='onChangeShuttleTime()'></ion-datetime>
   </ion-item>
 
   <ion-item class="no-border-bottom" margin-bottom>
-    <ion-icon item-start name='heart'></ion-icon>
+    <!-- <ion-icon item-start name='heart'></ion-icon> -->
+    <img class='custom-icon' item-start src="../../assets/svg/orderform_wheelchair_seat.svg" alt="">
     <ion-label>Wheelchair Seats</ion-label>
     <ion-checkbox item-end color="default" checked="false" [(ngModel)]="Booking.wheelchairBool"></ion-checkbox>
   </ion-item>
 
   <ion-item class="no-border-bottom">
-    <ion-icon item-start name='heart'></ion-icon>
+    <!-- <ion-icon item-start name='heart'></ion-icon> -->
+    <img class='custom-icon' item-start src="../../assets/svg/orderform_carer.svg" alt="">
     <ion-label>Carer</ion-label>
     <ion-checkbox item-end color="default" checked="false" [(ngModel)]="Booking.carerBool"></ion-checkbox>
   </ion-item>
@@ -70,10 +79,19 @@
 
   <ion-grid class="seat-type-table">
     <ion-row class="table-icons">
-      <ion-col col-6 item-start class="border-right custom-col"><ion-icon name="heart"></ion-icon></ion-col>
-      <ion-col col-6 item-start class='custom-col'><ion-icon name="heart"></ion-icon></ion-col>
+      <ion-col col-6 item-start class="border-right custom-col">
+          <img class="wc-icon" src="../../assets/svg/orderform_remaining_wheelchair.svg" alt="">
+          <span id="wc-seat-count" class="av-count">{{wheelchairRandNum}}</span>
+          <span class="seat-label">slots</span>
+      </ion-col>
+      <ion-col col-6 item-start class='custom-col'>
+          <img class="wc-icon" src="../../assets/svg/orderform_remaining_nonwheelchair.svg" alt="">
+          <span id="nwc-seat-count" class="av-count">{{nonWheelchairRandNum}}</span>
+          <span class="seat-label">slots</span>
+      </ion-col>
     </ion-row>
   </ion-grid>
 
   <button id='btnBookNow' ion-button block (click)='goToConfirmPage(Booking)'>Book Now</button>
+
 </ion-content>
