--- a/src/pages/reservation/reservation.html
+++ b/src/pages/reservation/reservation.html
@@ -13,19 +13,19 @@
 </ion-header>
 
 <ion-content class='container' margin-top>
-
   <ion-item>
     <img class='custom-icon' item-start src="../../assets/svg/orderform_calendar.svg" alt="">
 
     <ion-label>Date</ion-label>
-    <ion-datetime displayFormat="MMM DD YYYY" [(ngModel)]="Booking.date" min= {{minDate}} max ={{maxDate}}></ion-datetime>
+    <ion-datetime (ionChange)='onDateChange(Booking.date)' displayFormat="MMM DD YYYY" [(ngModel)]="Booking.date" min={{minDate}}
+      max={{maxDate}}></ion-datetime>
   </ion-item>
 
   <ion-item>
     <img class='custom-icon' item-start src="../../assets/svg/orderform_route.svg" alt="">
     <ion-label>Route</ion-label>
     <ion-select interface="action-sheet" (ionChange)="onRouteChange(Booking.routeName)" [(ngModel)]="Booking.routeName">
-      <ion-option *ngFor = 'let route of Routes; let i = index' [value]="route.name">{{i+1}} {{route.name}}</ion-option>
+      <ion-option *ngFor='let route of Routes; let i = index' [value]="route.name">{{i+1}} {{route.name}}</ion-option>
     </ion-select>
   </ion-item>
 
@@ -33,8 +33,9 @@
     <img class='custom-icon' item-start src="../../assets/svg/orderform_pickup.svg" alt="">
     <ion-label>Pickup Stop</ion-label>
     <!-- <ion-select *ngFor = 'let route of Routes' interface="action-sheet"> -->
-    <ion-select disabled={{!Booking.routeName}} interface="action-sheet" (ionChange)="onPickupChange(Booking.pickup)" [(ngModel)]="Booking.pickup">
-        <ion-option *ngFor = 'let station of selectedRoutePickupStations'>{{ station.name }}</ion-option>
+    <ion-select disabled={{!Booking.routeName}} interface="action-sheet" (ionChange)="onPickupChange(Booking.pickup)"
+      [(ngModel)]="Booking.pickup">
+      <ion-option *ngFor='let station of selectedRoutePickupStations'>{{ station.name }}</ion-option>
     </ion-select>
     <!-- <ion-select interface="action-sheet">
       <ion-option *ngFor = 'let route of Routes'>{{ route.stations.station }}</ion-option>
@@ -45,14 +46,15 @@
     <img class='custom-icon' item-start src="../../assets/svg/orderform_destination.svg" alt="">
     <ion-label>Dropoff Stop</ion-label>
     <ion-select disabled={{!Booking.routeName}} interface="action-sheet" [(ngModel)]="Booking.dropoff">
-        <ion-option *ngFor = 'let station of selectedRouteDropoffStations'>{{ station.name }}</ion-option>
+      <ion-option *ngFor='let station of selectedRouteDropoffStations'>{{ station.name }}</ion-option>
     </ion-select>
   </ion-item>
-  
+
   <ion-item class="no-border-bottom" margin-bottom>
     <img class='custom-icon' item-start src="../../assets/svg/orderform_shuttletime.svg" alt="">
     <ion-label>Shuttle Time</ion-label>
-    <ion-datetime disabled="{{!Booking.pickup}}"  displayFormat="HH:mm" hourValues={{hours}} minuteValues={{minute}} min={{minTime}} [(ngModel)]="Booking.alertTime" (ionChange)='onChangeShuttleTime()' ></ion-datetime>
+    <ion-datetime disabled={{disableShutterTime()}} displayFormat="HH:mm" hourValues={{hourArray}} minuteValues={{minute}}
+      min={{minTime}} [(ngModel)]="Booking.alertTime" (ionChange)='onChangeShuttleTime()'></ion-datetime>
   </ion-item>
 
   <ion-item class="no-border-bottom" margin-bottom>
@@ -72,14 +74,14 @@
   <ion-grid class="seat-type-table">
     <ion-row class="table-icons">
       <ion-col col-6 item-start class="border-right custom-col">
-          <img class="wc-icon" src="../../assets/svg/orderform_remaining_wheelchair.svg" alt="">
-          <span id="wc-seat-count" class="av-count">{{wheelchairRandNum}}</span>
-          <span class="seat-label">slots</span>
+        <img class="wc-icon" src="../../assets/svg/orderform_remaining_wheelchair.svg" alt="">
+        <span id="wc-seat-count" class="av-count">{{wheelchairRandNum}}</span>
+        <span class="seat-label">slots</span>
       </ion-col>
       <ion-col col-6 item-start class='custom-col'>
-          <img class="wc-icon" src="../../assets/svg/orderform_remaining_nonwheelchair.svg" alt="">
-          <span id="nwc-seat-count" class="av-count">{{nonWheelchairRandNum}}</span>
-          <span class="seat-label">slots</span>
+        <img class="wc-icon" src="../../assets/svg/orderform_remaining_nonwheelchair.svg" alt="">
+        <span id="nwc-seat-count" class="av-count">{{nonWheelchairRandNum}}</span>
+        <span class="seat-label">slots</span>
       </ion-col>
     </ion-row>
   </ion-grid>
